// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<trigger> demo: render [align-point] correctly 1`] = `
"<div class=\\"demo-point-trigger\\">
  <div>Click Me</div>
</div>"
`;

exports[`<trigger> demo: render [arrow] correctly 1`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 8px; row-gap: 8px;\\">
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Click Me
    </button>
    <!---->
  </div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Click Me (Arrow)
    </button>
    <!---->
  </div>
</div>"
`;

exports[`<trigger> demo: render [basic] correctly 1`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 8px; row-gap: 8px;\\">
  <!---->
  <div class=\\"sd-space-item\\"><span>Hover Me</span>
    <!---->
  </div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Click Me
    </button>
    <!---->
  </div>
  <!---->
  <div class=\\"sd-space-item\\"><span class=\\"sd-input-wrapper\\"><!----><input class=\\"sd-input sd-input-size-medium\\" type=\\"text\\" placeholder=\\"Focus on me\\" value=\\"\\"><!----><!----></span>
    <!---->
  </div>
</div>"
`;

exports[`<trigger> demo: render [nest] correctly 1`] = `
"<button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
  <!--v-if-->Click Me
</button>"
`;

exports[`<trigger> demo: render [scroll] correctly 1`] = `
"<div style=\\"height: 100px; overflow-y: scroll;\\">
  <div style=\\"height: 200px;\\"><button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\" style=\\"margin-top: 80px;\\">
      <!--v-if-->Click Me
    </button>
    <!---->
  </div>
</div>"
`;

exports[`<trigger> demo: render [translate] correctly 1`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 8px; row-gap: 8px;\\">
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->BOTTOM
    </button>
    <!---->
  </div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->BOTTOM OFFSET[100, 20]
    </button>
    <!---->
  </div>
  <!---->
  <div class=\\"sd-space-item\\"><button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->BOTTOM OFFSET[-100, 20]
    </button>
    <!---->
  </div>
</div>"
`;

exports[`<trigger> demo: render [triggers] correctly 1`] = `"<span class=\\"sd-input-wrapper\\"><!----><input class=\\"sd-input sd-input-size-medium\\" type=\\"text\\" placeholder=\\"Click/Hover/Focus on me\\" value=\\"\\"><!----><!----></span>"`;
